addons/shared_addons/themes/base/css/events.css
@font-face {
    font-family: 'Impact';
    src: url('../font/impact-webfont.eot');
    src: url('../font/impact-webfont.eot?#iefix') format('embedded-opentype'),
         url('../font/impact-webfont.woff') format('woff'),
         url('../font/impact-webfont.ttf') format('truetype'),
         url('../font/impact-webfont.svg#impactregular') format('svg');
    font-weight: normal;
    font-style: normal;

}

/*General CSS, aplied for all the screens (mobile first)*/
home{
/*
	background-color: #E5E4E3;
	background-image: linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -o-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -moz-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -webkit-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);
	background-image: -ms-linear-gradient(bottom, rgb(186,165,186) 31%, rgb(229,229,227) 66%);

	background-image: -webkit-gradient(
		linear,
		left bottom,
		left top,
		color-stop(0.31, rgb(186,165,186)),
		color-stop(0.66, rgb(229,229,227))
	);
*/

}

body {
	font-family: Impact;
/* 	color: #666578; */
	height:auto;
	margin:0;
	
background-image: linear-gradient(bottom, rgb(184,180,184) 9%, rgb(229,229,227) 90%);
background-image: -o-linear-gradient(bottom, rgb(184,180,184) 9%, rgb(229,229,227) 90%);
background-image: -moz-linear-gradient(bottom, rgb(184,180,184) 9%, rgb(229,229,227) 90%);
background-image: -webkit-linear-gradient(bottom, rgb(184,180,184) 9%, rgb(229,229,227) 90%);
background-image: -ms-linear-gradient(bottom, rgb(184,180,184) 9%, rgb(229,229,227) 90%);

background-image: -webkit-gradient(
	linear,
	left bottom,
	left top,
	color-stop(0.09, rgb(184,180,184)),
	color-stop(0.9, rgb(229,229,227))
);
}

html, body {
	min-height: 100%;
}

body, button, input, select, textarea{
	color: #666578;
	height: 100%;
}
a{
	color: #666578;
}

.no_red_hover a:hover{
	color: #676679 !important;
}

a:hover{
	color: #C03D3C;
}



/*  General classes*/
.red_text{
	font-family: inherit;
	color: #C03D3C;
}


.bright_brown_text{
	font-family: inherit;
	color: #E5E4E3;
}

.georgia_text{
	font-family: Georgia;
}


/*End of general classes*/

/*Text selection*/
::selection {
	background: #999A87; /*#C03D3C; Safari */
	}
::-moz-selection {
	background: #999A87; /* Firefox */
}


a{
	text-decoration:none;
}

ul{
	padding:0;
	margin:0;
}

p{
	margin: 0;
}

.container {
/* 	background-color:#E5E4E3; */
	background-color:none;
	margin:0 auto;
	width:100%;
	height:auto;
	min-height: 100%;  /**//*min heigt needed when there are no event*/
	position:relative; /**/

}

header{
	background-color:none;
	float:none;
	height:auto;
	text-align: center;
	padding: 0;
	border:0;
	width:100%;
	margin:0 auto;
}

#content{
/* 	background-color:#E5E4E3; */
	background-color:none;
	padding:0;
	width:90%;
	float:none;
	margin:0 auto;
	margin-top: 2.5%;
	padding-bottom:60px; 
	position:relative; /*Use to position it's child with absolute.*/
	min-height: 100%;		
}

#footer{
	position:absolute;
	bottom:0;
	width:90%;
	height:61px;   /* Height of the footer */
	background:#666578;
	margin:0 5% 0 5%;
}

/*#footer{
	position:absolute;
	bottom:0;
	width:58.5%;
	height:61px;    Height of the footer 
	background:#666578;
	margin:0 20.75% 0 20.75%;
}
*/

#footer ul{
	padding-top: 1%;
	margin:auto;
	width:80%;
}

.admin_label{
	width:50px;
}

h1#event_site_logo{
	margin:0 0 1% 0;
	font-size: 4em;
}

#event_site_logo a{
	font-family: Impact;
	color: #676679;
	margin:0 0 0 0;
}

h2#event_site_slogan{
	margin:0;
	color: #676679;
	font-family: Georgia;
	font-size: 0.9em;
	line-height: 1.2em;
}

/* Submit event*/
.submit_form_container{
	height: 500px;
}
.submit_form_container ul{
	padding-left: 2%;
	list-style: none;
}

.submit_form_container h2{
	padding:2% 0 0 2%;
}
.submit_success_button{
	margin: 2% 0 0 2%;
}
/*Left menu (calendar)*/
.event_left_menu{
	display:none; /*FIXME hide months in mobile screen*/
}

#event_left_menu_months{
	list-style: none;
	text-align: right;
	font-size: 1.4em;
}
/***************************/
/* Single page  (about, terms, submit...)*/
.text-page{
	font-size: 1.1em;
	font-family: Georgia;
	padding: 2% 2% 2% 2%;
}

/**************************/
/* Right menu (navigation)*/
#navbtn {
  display: block;
  margin-right: 5%;
  float: right;
/*   top: 0; */
  width: 26px;
  height: 25px;
  border: 1px solid #666578;
  border-radius: 5px 5px 5px 5px;
  background: url('../img/menu.png') center no-repeat;
  text-indent: -99999px;
/*   overflow: hidden; */
}
/*  display: none;
*/
.event_right_menu  { 
    display: none; 
    z-index:2;
    position:absolute;
/*     float:right; */
	padding-bottom: 2%;
	right:0%;
	top:0%;
	box-shadow:0 -2px 12px #999A87;
	border-radius:15px 15px 15px 15px;
	background-color: white;
    width:10em;
}

#ul_right_mobile{
	overflow: hidden;
	text-align:center;
}

#ul_left_mobile{
 	text-align:center;
	float: left;
	margin:0 auto;
}

.event_right_menu ul{   /*Right menu is placec before post_container to avoid problems with floats*/
	list-style: none;
	font-weight:none;
	width:auto; /**/
}
.event_right_menu li{
	font-size: 1.2em;
	color: #666578;
	padding: 0% 2%;
	margin:auto;
/* 	width:100%; */
	text-align: center;

}	

#newsletter_label{
	padding: 0% 2% 0;
}

#newsletter_menu_box{
	margin: 0 auto;
	background-color: white;
	z-index: 1;
	position:absolute;	

	padding: 2% 0%;
	width:30%;
	min-width: 150px;
	
	margin-left: 3%;
	-moz-box-shadow		: 0px -2px 12px #999A87;
	-webkit-box-shadow	: 0px -2px 12px #999A87;
	box-shadow			: 0px -2px 12px #999A87;
	
/* 	border:2px solid; */
	border-radius:15px;
	border-color: #666578;
	
	display:none;
}

.event_post_container{
	min-height: 25em;
	background-color:  #FFFFFF;
	/*padding: 5px 15px 15px 15px;
	float:left;	
		display:inline-block;
		*/
	/*margin: 0 15px 15px 0;*/
	/*outline: 3px solid rgba(0, 0, 0, 0.03);*/
	/*border: 1px solid rgba(0, 0, 0, 1);*/
	/*width: 240px;*/
}
/* ... */

